# EXCHANGE_2.0

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
.github/workflows/: cmake-single-platform-dev.yml  cmake-single-platform-prod.yml
include/: HelloWorld.h  test.h
include/Logger/: Logger.cpp  Logger.h  Logger.test.cpp
src/: CMakeLists.txt  main.cpp
src/MAAS/: CMakeLists.txt  main.cpp
src/MTAC/: CMakeLists.txt  main.cpp
src/MTAS/: CMakeLists.txt  main.cpp
src/MTAS/smtp-src/: KLMail.sln  MailAddress.h  globals.h
src/MTAS/smtp-src/KLSmtp/: KLSmtp.cpp  KLSmtp.rc  KlSmtp.vcproj  MailSession.cpp  MailSession.h  Process.cpp  stdafx.cpp  stdafx.h
